[package]
name = "devgen-tree-sitter-toml"
description = "TOML grammar for tree-sitter"
version = "0.21.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "toml"]
categories = ["parsing", "text-editors"]
authors = [
  "Ika <ikatyang@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>"
]
repository = "https://github.com/imotai/tree-sitter-toml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.21.0"

[build-dependencies]
cc = "1.0.92"
